--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -26,8 +26,8 @@
                 android:layout_gravity="end|bottom"
                 android:layout_margin="16dp"
                 android:onClick="@{() -> viewModel.onButtonClick()}"
-                android:contentDescription="@string/detail_button_description"
-                android:src="@drawable/ic_baseline_article_24" />
+                android:contentDescription="@string/shoe_list_detail_button"
+                android:src="@drawable/ic_add" />
         </LinearLayout>
     </ScrollView>
 
