--- a/starter/app/src/main/res/layout/fragment_welcome.xml
+++ b/starter/app/src/main/res/layout/fragment_welcome.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="@dimen/fragment_horizontal_margin"
+        android:layout_marginHorizontal="@dimen/medium"
         tools:context=".welcome.WelcomeFragment">
 
 
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/fragment_vertical_margin"
+            android:layout_marginTop="@dimen/medium"
             android:text="@string/welcome_description"
             app:layout_constraintBottom_toTopOf="@+id/welcome_button"
             app:layout_constraintEnd_toEndOf="parent"
