--- a/starter/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="@dimen/medium"
-        android:layout_marginVertical="@dimen/medium"
+        android:layout_marginVertical="@dimen/toolbar_height"
         android:orientation="vertical"
         tools:context=".shoedetail.ShoeDetailFragment">
 
