--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -12,10 +12,13 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/toolbar_height"
+        android:layout_marginHorizontal="@dimen/medium"
         tools:context=".shoelisting.ShoeListFragment">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:id="@+id/shoesListLinearLayout"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
@@ -24,7 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|bottom"
-                android:layout_margin="16dp"
+                android:layout_margin="@dimen/medium"
                 android:onClick="@{() -> viewModel.onButtonClick()}"
                 android:contentDescription="@string/shoe_list_detail_button"
                 android:src="@drawable/ic_add" />
