--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -4,6 +4,8 @@
     <dimen name="medium">16dp</dimen>
     <dimen name="large">32dp</dimen>
 
+    <dimen name="toolbar_height">64dp</dimen>
+
     <dimen name="small_text">14sp</dimen>
     <dimen name="medium_text">16sp</dimen>
     <dimen name="large_text">20sp</dimen>
