--- a/starter/app/src/main/res/navigation/nav_graph.xml
+++ b/starter/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="com.udacity.shoestore.login.LoginFragment"
+        android:name="com.udacity.shoestore.LoginFragment"
         android:label="fragment_login"
         tools:layout="@layout/fragment_login">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/welcomeFragment"
-        android:name="com.udacity.shoestore.welcome.WelcomeFragment"
+        android:name="com.udacity.shoestore.WelcomeFragment"
         android:label="WelcomeFragment">
         <action
             android:id="@+id/action_welcomeFragment_to_instructionFragment"
@@ -26,7 +26,7 @@
     </fragment>
     <fragment
         android:id="@+id/instructionFragment"
-        android:name="com.udacity.shoestore.instruction.InstructionFragment"
+        android:name="com.udacity.shoestore.InstructionFragment"
         android:label="InstructionFragment">
         <action
             android:id="@+id/action_instructionFragment_to_shoeListFragment"
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/shoeListFragment"
-        android:name="com.udacity.shoestore.shoelisting.ShoeListFragment"
+        android:name="com.udacity.shoestore.ShoeListFragment"
         android:label="ShoeListFragment">
         <action
             android:id="@+id/action_shoeListFragment_to_shoeDetailFragment"
@@ -42,6 +42,6 @@
     </fragment>
     <fragment
         android:id="@+id/shoeDetailFragment"
-        android:name="com.udacity.shoestore.shoedetail.ShoeDetailFragment"
+        android:name="com.udacity.shoestore.ShoeDetailFragment"
         android:label="ShoeDetailFragment" />
 </navigation>
