--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -11,7 +11,7 @@
         android:paddingTop="@dimen/medium"
         android:paddingRight="@dimen/medium"
         android:paddingBottom="@dimen/medium"
-        tools:context=".login.LoginFragment">
+        tools:context=".LoginFragment">
 
         <EditText
             android:id="@+id/username"
