refac: reorganizing files

--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.udacity.shoestore.ShoeListViewModel" />
+            type="com.udacity.shoestore.models.ShoesViewModel" />
     </data>
 
     <ScrollView
