--- a/starter/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_list.xml
@@ -12,10 +12,11 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/toolbar_height"
         android:layout_marginHorizontal="@dimen/medium"
+        android:layout_marginTop="@dimen/toolbar_height"
         tools:context=".ShoeListFragment">
 
+        <!--LinearLayout as per the instructions and simplifies adding another view as a child-->
         <LinearLayout
             android:id="@+id/shoesListLinearLayout"
             android:layout_width="match_parent"
