--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -3,19 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <!-- It is a simple layout so linearLayout is less computational heavy-->
+    <LinearLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:paddingLeft="@dimen/medium"
-        android:paddingTop="@dimen/medium"
+        android:paddingTop="@dimen/toolbar_height"
         android:paddingRight="@dimen/medium"
+        android:gravity="center_horizontal"
         android:paddingBottom="@dimen/medium"
         tools:context=".LoginFragment">
 
         <EditText
             android:id="@+id/username"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="96dp"
@@ -24,14 +27,11 @@
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
             android:minHeight="48dp"
-            android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:selectAllOnFocus="true" />
 
         <EditText
             android:id="@+id/password"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="8dp"
@@ -42,42 +42,21 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             android:minHeight="48dp"
-            android:selectAllOnFocus="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/username" />
+            android:selectAllOnFocus="true"/>
 
         <Button
             android:id="@+id/sign_in"
-            android:layout_width="0dp"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginTop="16dp"
-            android:text="@string/action_sign_in"
-            app:layout_constraintBottom_toTopOf="@+id/sign_up"
-            app:layout_constraintEnd_toEndOf="@+id/sign_up"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="@+id/sign_up"
-            app:layout_constraintTop_toBottomOf="@+id/password"
-            app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintVertical_chainStyle="packed" />
+            android:layout_marginTop="64dp"
+            android:text="@string/action_sign_in" />
 
         <Button
             android:id="@+id/sign_up"
-            android:layout_width="wrap_content"
+            android:layout_width="160dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:layout_marginStart="48dp"
             android:layout_marginTop="@dimen/small"
-            android:layout_marginEnd="48dp"
-            android:layout_marginBottom="64dp"
-            android:text="@string/action_sign_up"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sign_in"
-            app:layout_constraintVertical_bias="0.345" />
+            android:text="@string/action_sign_up" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
