--- a/starter/app/src/main/res/layout/fragment_shoe_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_shoe_detail.xml
@@ -3,6 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.udacity.shoestore.models.ShoesViewModel" />
+    </data>
+
     <!--  Complex layout that constraintLayout simplifies. With linearLayout I would need
       to nest another linearLayout for the buttons-->
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -28,7 +35,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="name"
             android:hint="@string/shoe_detail_name_hint"
-            android:inputType="textCapCharacters"
+            android:inputType="textCapWords"
+            android:text="@={viewModel.name}"
             android:textSize="@dimen/medium_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/shoeNameLabel" />
@@ -49,7 +57,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="name"
             android:hint="@string/shoe_detail_company_hint"
-            android:inputType="textCapCharacters"
+            android:inputType="textCapSentences"
+            android:text="@={viewModel.company}"
             android:textSize="@dimen/medium_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/companyLabel" />
@@ -70,7 +79,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="name"
             android:hint="@string/shoe_detail_size_hint"
-            android:inputType="number"
+            android:inputType="numberDecimal"
+            android:text="@={viewModel.size}"
             android:textSize="@dimen/medium_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/shoeSizeLabel" />
@@ -91,7 +101,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="name"
             android:hint="@string/shoe_detail_description_hint"
-            android:inputType="textMultiLine"
+            android:inputType="textImeMultiLine"
+            android:text="@={viewModel.description}"
             android:textSize="@dimen/medium_text"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/descriptionLabel" />
