--- a/starter/app/src/main/res/layout/fragment_login.xml
+++ b/starter/app/src/main/res/layout/fragment_login.xml
@@ -10,9 +10,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:paddingLeft="@dimen/medium"
-        android:paddingTop="@dimen/toolbar_height"
         android:paddingRight="@dimen/medium"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:paddingBottom="@dimen/medium"
         tools:context=".LoginFragment">
 
@@ -20,40 +19,32 @@
             android:id="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="96dp"
-            android:layout_marginEnd="24dp"
             android:autofillHints=""
             android:hint="@string/prompt_email"
             android:inputType="textEmailAddress"
-            android:minHeight="48dp"
             android:selectAllOnFocus="true" />
 
         <EditText
             android:id="@+id/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
             android:hint="@string/prompt_password"
             android:imeActionLabel="@string/action_sign_in"
             android:imeOptions="actionDone"
             android:importantForAutofill="no"
             android:inputType="textPassword"
-            android:minHeight="48dp"
             android:selectAllOnFocus="true"/>
 
         <Button
             android:id="@+id/sign_in"
-            android:layout_width="160dp"
+            android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="@dimen/extra_large"
             android:text="@string/action_sign_in" />
 
         <Button
             android:id="@+id/sign_up"
-            android:layout_width="160dp"
+            android:layout_width="@dimen/button_width"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/small"
             android:text="@string/action_sign_up" />
