--- a/starter/app/src/main/res/values/dimens.xml
+++ b/starter/app/src/main/res/values/dimens.xml
@@ -3,8 +3,10 @@
     <dimen name="small">8dp</dimen>
     <dimen name="medium">16dp</dimen>
     <dimen name="large">32dp</dimen>
+    <dimen name="extra_large">64dp</dimen>
 
-    <dimen name="toolbar_height">64dp</dimen>
+    <dimen name="divider_height">1dp</dimen>
+    <dimen name="button_width">160dp</dimen>
 
     <dimen name="small_text">14sp</dimen>
     <dimen name="medium_text">16sp</dimen>
